tests/src/frontend/syntax/invalid/did_you_mean_sub.sk
class A{cla_pos: String}

fun f(a: A): String {
  a.pos
}
